--- a/Day32-Java-Big-Integer/Description
+++ b/Day32-Java-Big-Integer/Description
@@ -1,3 +1,9 @@
+Topic : JAVA BIGINTEGER
+Question: you have to add and multiply huge numbers! These numbers are so big that you can't contain them in any ordinary data types like a long integer.
+          Use the power of Java's BigInteger class and solve this problem.
+
+
+
 In this problem, you have to add and multiply huge numbers! These numbers are so big that you can't contain them in any ordinary data types like a long integer.
 
 Use the power of Java's BigInteger class and solve this problem.
