--- a/Day37-Java-ArrayList/Description
+++ b/Day37-Java-ArrayList/Description
@@ -1,6 +1,12 @@
+Topic: Data Structures
+Question: You need to answer a few queries where you need to tell the number located in yth position of xth line in given array.
+
+
+
+
 Sometimes it's better to use dynamic size arrays. Java's Arraylist can provide you this feature. Try to solve this problem using Arraylist.
 
-You are given  lines. In each line there are zero or more integers. You need to answer a few queries where you need to tell the number located in yth position of xth line.
+You are given n lines. In each line there are zero or more integers. You need to answer a few queries where you need to tell the number located in yth position of xth line.
 
 Take your input from System.in.
 
